--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.1"
 
 services:
   ecobee-exporter:
-      image: ecobee-exporter
+      image: ecobee
       container_name: ecobee-exporter
       restart: always
       ports:
@@ -10,5 +10,4 @@ services:
       volumes:
         - /mnt/user/appdata/ecobee-exporter/data:/db
       environment:
-        - ECOBEE_LISTEN_ADDRESS: 9098
-        - ECOBEE_APPKEY: p3NbLx6iSYTjXDFHIMtM77SWWPLRuEZ0
+        ECOBEE_APPKEY: p3NbLx6iSYTjXDFHIMtM77SWWPLRuEZ0
